--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Dabe Dabbles
 
 # Short bio or description (displayed in the header)
-description: Gabriel Klavans, Computer Science Undergrad at BU
+description: Gabriel Klavans, MS in Computer Science 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/32149200?s=460&v=4
