update some metadata

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Dabe Dabbles
 
 # Short bio or description (displayed in the header)
-description: Gabriel Klavans, MS in Computer Science 
+description: Gabriel Klavans, Computer Scientist 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars3.githubusercontent.com/u/32149200?s=460&v=4
@@ -18,14 +18,14 @@ avatar: https://avatars3.githubusercontent.com/u/32149200?s=460&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: gabeklav@bu.edu
+  email: gabeklav@fastmail.com
   facebook: gabriel.klavans
   flickr:
   github: gabeklavans
   instagram:
   linkedin: gabrielklavans
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: rss # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: users/10247638/dabe
   youtube: # channel/<your_long_string> or user/<user-name>
@@ -37,11 +37,11 @@ footer-links:
 disqus: dabedabbles
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-146021463-1
+google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: https://gabeklavans.github.io/
+url: https://dabe.tech
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
